// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`KeoReportNext — чертежи Данилюка > слепок обеих проекций > план 1`] = `
{
  "counts": {
    "circle": 1,
    "defs": 1,
    "g": 9,
    "line": 120,
    "path": 48,
    "pattern": 1,
    "polygon": 1,
    "rect": 6,
    "text": 18,
  },
  "texts": [
    "20,7",
    "10",
    "20",
    "30",
    "40",
    "10",
    "20",
    "30",
    "40",
    "0",
    "5",
    "10",
    "15",
    "А (РТ)",
    "1500",
    "3400",
    "5400",
    "4400",
  ],
}
`;

exports[`KeoReportNext — чертежи Данилюка > слепок обеих проекций > разрез — небо видно 1`] = `
{
  "counts": {
    "circle": 1,
    "defs": 1,
    "g": 16,
    "line": 136,
    "path": 48,
    "pattern": 1,
    "polygon": 1,
    "polyline": 2,
    "rect": 6,
    "text": 15,
  },
  "texts": [
    "0",
    "5",
    "10",
    "1,6",
    "α = 20,0° — верх проёма",
    "β = 13,5° — верх застройки (H = 8 м, l = 25 м)",
    "А (РТ)",
    "4400",
    "1000",
    "5400",
    "900",
    "2400",
    "2700",
    "+0,000",
    "+0,800 (УРП)",
  ],
}
`;

exports[`KeoReportNext — чертежи Данилюка > слепок обеих проекций > разрез — небо перекрыто 1`] = `
{
  "counts": {
    "circle": 1,
    "defs": 1,
    "g": 15,
    "line": 136,
    "path": 48,
    "pattern": 1,
    "polyline": 2,
    "rect": 6,
    "text": 15,
  },
  "texts": [
    "0",
    "5",
    "10",
    "небо из РТ не видно",
    "α = 20,0° — верх проёма",
    "β = 44,3° — верх застройки (H = 30 м, l = 25 м)",
    "А (РТ)",
    "4400",
    "1000",
    "5400",
    "900",
    "2400",
    "2700",
    "+0,000",
    "+0,800 (УРП)",
  ],
}
`;
